--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -12,6 +12,10 @@ h1 {
     background:#eee;
 }
 
+.priorities {
+    background:variables.getColor(darkBase);
+}
+
 .three-column-option_container {
     margin:auto;
     max-width:variables.$page-width;
@@ -24,7 +28,7 @@ h1 {
     grid-gap: 50px 50px;
 
     div {
-        background:variables.getColor(base);
+        background:variables.getColor(darkBase);
         padding:20px 30px;
         border-radius:50px;
         -webkit-transition:all 0.2s ease-in-out;
@@ -33,6 +37,7 @@ h1 {
         transition:all 0.2s ease-in-out;
 
         &:hover {
+            background:variables.getColor(lightBase);
             box-shadow:0px 20px 50px rgba(0, 0, 0, 0.08);
             cursor: pointer;
 
